# libk

./: configure  configure.ac
package/libk/: Makefile.ritter
package/libk-avr/: Makefile.ritter
src/: Makefile  Makefile.am  Makefile.in  adc.h  gpio.h  i2c.h  memory.h  pwm.h  serial.c  serial.h  threads.c  threads.h  time.h  types.h  util.h
